<resources>
    <string name="app_name">Contacts</string>

    <string name="add_contact">Add contact</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="edit">Edit</string>

    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="phone_number">Phone number</string>

    <string name="enter_name">Enter name</string>
    <string name="enter_surname">Enter surname</string>
    <string name="incorrect_phone_number">Incorrect phone number</string>

    <string name="contact_is_added">Contact is added</string>
    <string name="contact_is_deleted">Contact is deleted</string>
    <string name="contact_is_edited">Contact is edited</string>
    <string name="contact_has_not_been_edited">Contact has\'t been edited</string>
    <string name="contacts_are_deleted">Contacts are deleted</string>
    <string name="no_contacts_selected">No contacts selected</string>
</resources>