<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backgroundColor"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="@dimen/elevation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:title="@string/app_name"
            app:titleCentered="true"
            app:titleTextAppearance="@style/TitleTextAppearance"
            app:titleTextColor="?attr/colorOnPrimary" />

        <ImageButton
            android:id="@+id/deleteModeButton"
            android:layout_width="?attr/actionBarSize"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="@color/transparent"
            android:importantForAccessibility="no"
            android:src="@drawable/ic_delete_outline" />
    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <Button
        android:id="@+id/addButton"
        android:layout_width="match_parent"
        android:layout_height="@dimen/medium_size"
        android:layout_marginHorizontal="@dimen/large_margin"
        android:layout_marginBottom="@dimen/large_margin"
        android:elevation="@dimen/elevation"
        android:text="@string/add_contact"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/deleteModeButtons"
        android:layout_width="match_parent"
        android:layout_height="@dimen/medium_size"
        android:layout_marginHorizontal="@dimen/large_margin"
        android:layout_marginBottom="@dimen/large_margin"
        android:orientation="horizontal"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/deleteButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="@dimen/large_margin"
            android:layout_weight="1"
            android:backgroundTint="?attr/colorError"
            android:elevation="@dimen/elevation"
            android:text="@string/delete"
            android:textSize="@dimen/button_text_size"
            android:visibility="visible"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:elevation="@dimen/elevation"
            android:text="@string/cancel"
            android:textSize="@dimen/button_text_size"
            tools:ignore="ButtonStyle" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>